RadarView_Web/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: radarview
  labels:
    app: radarview
